# Smart-SocialMedia-Agent

./: README.md  main.py  pyproject.toml  run.py  streamlit_app.py  test_db.py
app/agent/: agent.py  prompts.py
app/database/: connection.py
app/llm/: model.py
app/prompts/: reply_prompt.py  system_prompt.py
app/schemas/: product.py
app/tools/: __init__.py  moderation.py  product.py
app/utils/: helpers.py  printer.py
