[project]
name = "commentanalyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.14",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]
